--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^0.13.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_messaging: ^14.2.0
+  firebase_core: ^2.4.0
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
