--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_messaging: ^14.2.0
   firebase_core: ^2.4.0
   flutter_local_notifications: ^13.0.0
+  awesome_dialog: ^3.0.2
+  firebase_core_desktop: ^1.0.2
 
 dev_dependencies:
   flutter_test:
