--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^2.7.0
   flutter_local_notifications: ^13.0.0
   firebase_core_desktop: ^1.0.2
+  awesome_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
